--- a/Ej8.ipynb
+++ b/Ej8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,73 @@
     }
    ],
    "source": [
-    "\n"
+    "# Graficos normales\n",
+    "import FuncionesG.Barras as DiagramaBarras\n",
+    "import FuncionesG.Pie as DiagramaPastel\n",
+    "import FuncionesG.Histograma as DiagramaHistograma\n",
+    "import FuncionesG.Ojiva as DiagramaOjiva\n",
+    "import FuncionesG.Poligonos as DiagramaPoligono\n",
+    "\n",
+    "# GRAFICO con limites superiores e inferiores\n",
+    "import FuncionesG.plotBarras as GraficoBarras\n",
+    "import FuncionesG.plotPie as GraficoPastel\n",
+    "import FuncionesG.plotHistograma as GraficoHistograma\n",
+    "import FuncionesG.plotOjiva as GraficoOjiva\n",
+    "import FuncionesG.plotPoligono as GraficoPoligono\n",
+    "\n",
+    "#Funciones \n",
+    "import FUNCIONES.clases_grouped as ClasesAgrupadas\n",
+    "import FUNCIONES.clases_str_sort as clas_str_sort\n",
+    "import FUNCIONES.fa_grouped as CalcularFABS\n",
+    "import FUNCIONES.format_str as FormatearStrings\n",
+    "import FUNCIONES.frec_abs as abs\n",
+    "import FUNCIONES.frec_acum as FrecAcumulada\n",
+    "import FUNCIONES.frec_rel as FrecRelativa\n",
+    "import FUNCIONES.ordenar_asc as OrdenarArregloAsendente\n",
+    "import FUNCIONES.sort_clases_fa as OrdenarFrecAbsolutas\n",
+    "import FUNCIONES.tabla_grouped as TablaCompleta\n",
+    "import FUNCIONES.tabla as Tabla4Datos\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Datos de entrada\n",
+    "dt = [\n",
+    "  2.5, 4.5, 5.8, 2.2, 5.7,\n",
+    "  5.3, 4.0, 0.9, 2.5, 2.3,\n",
+    "  3.2, 4.9, 2.7, 3.7, 3.8,\n",
+    "  4.9, 2.8, 3.6, 4.2, 3.1,\n",
+    "  7.2, 1.9, 5.9, 3.3, 2.9,\n",
+    "  1.1, 1.7, 2.6, 3.1, 4.4\n",
+    "]\n",
+    "# Datos ordenados\n",
+    "dt = OrdenarArregloAsendente.ordenar_asc(dt)\n",
+    "\n",
+    "# Obtenemos clases, lim inf, lim. sup, y marcas de clase\n",
+    "clases, lim_inf, lim_sup, mrks = ClasesAgrupadas.clases_grouped(dt)\n",
+    "\n",
+    "# Frecuencia absoluta\n",
+    "fa = CalcularFABS.fa_grouped(lim_inf, lim_sup, dt)\n",
+    "\n",
+    "# Frecuencia relativa\n",
+    "fr = FrecRelativa.frec_rel(fa)\n",
+    "\n",
+    "# Frecuencia relativa acumulada\n",
+    "facum = FrecAcumulada.frec_acum(fr)\n",
+    "\n",
+    "# Imprecion en tabla para todos los datos\n",
+    "TablaCompleta.tabla_grouped(clases, lim_inf, lim_sup, mrks, fa, fr, facum)\n",
+    "\n",
+    "# Graficar el histograma con las mismas marcas de clase y frecuencia acumulada\n",
+    "GraficoHistograma.plot_grafHist(clases, fr, mrks) # Gráfico Histograma\n",
+    "\n",
+    "#Si mrks es una lista de marcas de clase, entonces valores_ref_eje = lista de números que van desde 1 hasta el número de marcas de clase\n",
+    "valores_ref_eje = list(range(1, len(mrks) + 1)) #  Marcas de clase en el eje x \n",
+    "GraficoOjiva.plot_grafOjiva(mrks, valores_ref_eje, facum) # Grafico de Ojiva\n",
+    "import math\n",
+    "# Calcular el resultado de la expresión\n",
+    "resultado = 1 + 3.3 * (math.log10(30)) \n",
+    "# Imprimir el resultado\n",
+    "print(resultado)\n"
    ]
   }
  ],
