--- a/Ej12.ipynb
+++ b/Ej12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,61 @@
     }
    ],
    "source": [
+    "# Graficos normales\n",
+    "import FuncionesG.Barras as DiagramaBarras\n",
+    "import FuncionesG.Pie as DiagramaPastel\n",
+    "import FuncionesG.Histograma as DiagramaHistograma\n",
+    "import FuncionesG.Ojiva as DiagramaOjiva\n",
+    "import FuncionesG.Poligonos as DiagramaPoligono\n",
+    "\n",
+    "# GRAFICO con limites superiores e inferiores\n",
+    "import FuncionesG.plotBarras as GraficoBarras\n",
+    "import FuncionesG.plotPie as GraficoPastel\n",
+    "import FuncionesG.plotHistograma as GraficoHistograma\n",
+    "import FuncionesG.plotOjiva as GraficoOjiva\n",
+    "import FuncionesG.plotPoligono as GraficoPoligono\n",
+    "\n",
+    "#Funciones \n",
+    "import FUNCIONES.clases_grouped as ClasesAgrupadas\n",
+    "import FUNCIONES.clases_str_sort as clas_str_sort\n",
+    "import FUNCIONES.fa_grouped as CalcularFABS\n",
+    "import FUNCIONES.format_str as FormatearStrings\n",
+    "import FUNCIONES.frec_abs as abs\n",
+    "import FUNCIONES.frec_acum as FrecAcumulada\n",
+    "import FUNCIONES.frec_rel as FrecRelativa\n",
+    "import FUNCIONES.ordenar_asc as OrdenarArregloAsendente\n",
+    "import FUNCIONES.sort_clases_fa as OrdenarFrecAbsolutas\n",
+    "import FUNCIONES.tabla_grouped as TablaCompleta\n",
+    "import FUNCIONES.tabla as Tabla4Datos\n",
+    "\n",
+    "# Datos de entrada\n",
+    "dt = [250, 790, 470, 510, 500, 330,\n",
+    "    300, 750, 580, 740, 420, 260,\n",
+    "    440, 770, 400, 540, 530, 330,\n",
+    "    390, 380, 340, 460, 530, 260,\n",
+    "    410, 360, 270, 510, 630, 330]\n",
+    "# Datos ordenados\n",
+    "dt = OrdenarArregloAsendente.ordenar_asc(dt)\n",
+    "\n",
+    "# Obtenemos clases, lim inf, lim. sup, y marcas de clase\n",
+    "clases, lim_inf, lim_sup, mrks = ClasesAgrupadas.clases_grouped(dt)\n",
+    "\n",
+    "# Frecuencia absoluta\n",
+    "fa = CalcularFABS.fa_grouped(lim_inf, lim_sup, dt)\n",
+    "\n",
+    "# Frecuencia relativa\n",
+    "fr = FrecRelativa.frec_rel(fa)\n",
+    "\n",
+    "# Frecuencia relativa acumulada\n",
+    "facum = FrecAcumulada.frec_acum(fr)\n",
+    "\n",
+    "# Imprecion en tabla para todos los datos\n",
+    "TablaCompleta.tabla_grouped(clases, lim_inf, lim_sup, mrks, fa, fr, facum)\n",
+    "# Llamada de las funciones para graficar\n",
+    "GraficoHistograma.plot_grafHist(fr, mrks, clases)# Grafico Histograma\n",
+    "#Si mrks es una lista de marcas de clase, entonces valores_ref_eje = lista de números que van desde 1 hasta el número de marcas de clase\n",
+    "valores_ref_eje = list(range(1, len(mrks) + 1)) #  Marcas de clase en el eje x \n",
+    "GraficoOjiva.plot_grafOjiva(mrks, valores_ref_eje, facum) # Grafico de Ojiva\n",
     "\n"
    ]
   }
