--- a/Ej7.ipynb
+++ b/Ej7.ipynb
@@ -71,13 +71,9 @@
     "\n",
     "# Datos de entrada\n",
     "datos = [\n",
-    "  \"Pumas\", \"América\", \"Chivas\", \"Pumas\", \"Chivas\",\n",
-    "  \"Chivas\", \"América\", \"Toluca\", \"Toluca\", \"Pumas\",\n",
-    "  \"Santos\", \"Necaxa\", \"América\", \"América\", \"América\",\n",
-    "  \"Pumas\", \"Santos\", \"Pumas\", \"Pumas\", \"Pumas\",\n",
-    "  \"América\", \"Chivas\", \"América\", \"Pumas\", \"Necaxa\",\n",
-    "  \"Toluca\", \"Chivas\", \"América\", \"Toluca\", \"Santos\"\n",
-    "]\n",
+    "  \"Pumas\", \"América\", \"Chivas\", \"Pumas\", \"Chivas\", \"Chivas\", \"América\", \"Toluca\", \"Toluca\", \"Pumas\",\n",
+    "  \"Santos\", \"Necaxa\", \"América\", \"América\", \"América\", \"Pumas\", \"Santos\", \"Pumas\", \"Pumas\", \"Pumas\",\n",
+    "  \"América\", \"Chivas\", \"América\", \"Pumas\", \"Necaxa\", \"Toluca\", \"Chivas\", \"América\", \"Toluca\", \"Santos\"]\n",
     "\n",
     "# Formatea los datos para evitar espacios y excepciones en cadena\n",
     "datos_formated = FormatearStrings.format_str(datos)\n",
